Added signup form, optimised join.html, removed unnecessary contents of index

--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -2335,7 +2335,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #002147;
+  --primary: #000000;
   --secondary: #fdc800;
   --success: #28a745;
   --info: #17a2b8;
@@ -2371,7 +2371,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: #000000;
   text-align: left;
   background-color: #fff; }
 
@@ -2449,7 +2449,7 @@ sup {
   top: -.5em; }
 
 a {
-  color: #002147;
+  color: #000000;
   text-decoration: none;
   background-color: transparent; }
   a:hover {
@@ -2766,7 +2766,7 @@ kbd {
   padding: 0.2rem 0.4rem;
   font-size: 87.5%;
   color: #fff;
-  background-color: #cc0000;
+  background-color: #000000;
   border-radius: 0.2rem; }
   kbd kbd {
     padding: 0;
@@ -2776,7 +2776,7 @@ kbd {
 pre {
   display: block;
   font-size: 87.5%;
-  color: #212529; }
+  color: #000000; }
   pre code {
     font-size: inherit;
     color: inherit;
@@ -3488,7 +3488,7 @@ pre {
 .table {
   width: 100%;
   margin-bottom: 1rem;
-  color: #212529; }
+  color: #000000; }
   .table th,
   .table td {
     padding: 0.75rem;
@@ -3523,7 +3523,7 @@ pre {
   background-color: rgba(0, 0, 0, 0.05); }
 
 .table-hover tbody tr:hover {
-  color: #212529;
+  color: #000000;
   background-color: rgba(0, 0, 0, 0.075); }
 
 .table-primary,
@@ -3824,7 +3824,7 @@ select.form-control:focus::-ms-value {
   margin-bottom: 0;
   font-size: 1rem;
   line-height: 1.5;
-  color: #212529;
+  color: #000000;
   background-color: transparent;
   border: solid transparent;
   border-width: 1px 0; }
@@ -4104,7 +4104,7 @@ textarea.form-control {
 .btn {
   display: inline-block;
   font-weight: 400;
-  color: #212529;
+  color: #000000;
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
@@ -4123,7 +4123,7 @@ textarea.form-control {
     .btn {
       transition: none; } }
   .btn:hover {
-    color: #212529;
+    color: #000000;
     text-decoration: none; }
   .btn:focus, .btn.focus {
     outline: 0;
@@ -4137,8 +4137,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #002147;
-  border-color: #002147; }
+  background-color: #000000;
+  border-color: #000000; }
   .btn-primary:hover {
     color: #fff;
     background-color: #000f21;
@@ -4150,8 +4150,8 @@ fieldset:disabled a.btn {
     box-shadow: 0 0 0 0.2rem rgba(38, 66, 99, 0.5); }
   .btn-primary.disabled, .btn-primary:disabled {
     color: #fff;
-    background-color: #002147;
-    border-color: #002147; }
+    background-color: #000000;
+    border-color: #000000; }
   .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
   .show > .btn-primary.dropdown-toggle {
     color: #fff;
@@ -4162,26 +4162,26 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.2rem rgba(38, 66, 99, 0.5); }
 
 .btn-secondary {
-  color: #212529;
-  background-color: #fdc800;
+  color: #000000;
+  background-color: #000000;
   border-color: #fdc800; }
   .btn-secondary:hover {
-    color: #212529;
-    background-color: #d7aa00;
+    color: #000000;
+    background-color: #000000;
     border-color: #caa000; }
   .btn-secondary:focus, .btn-secondary.focus {
-    color: #212529;
-    background-color: #d7aa00;
-    border-color: #caa000;
+    color: #000000;
+    background-color: #000000;
+    border-color: #000000;
     box-shadow: 0 0 0 0.2rem rgba(220, 176, 6, 0.5); }
   .btn-secondary.disabled, .btn-secondary:disabled {
-    color: #212529;
-    background-color: #fdc800;
+    color: #000000;
+    background-color: #000000;
     border-color: #fdc800; }
   .btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active,
   .show > .btn-secondary.dropdown-toggle {
-    color: #212529;
-    background-color: #caa000;
+    color: #000000;
+    background-color: #000000;
     border-color: #bd9600; }
     .btn-secondary:not(:disabled):not(.disabled):active:focus, .btn-secondary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-secondary.dropdown-toggle:focus {
@@ -4240,25 +4240,25 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5); }
 
 .btn-warning {
-  color: #212529;
+  color: #000000;
   background-color: #ffc107;
   border-color: #ffc107; }
   .btn-warning:hover {
-    color: #212529;
+    color: #000000;
     background-color: #e0a800;
     border-color: #d39e00; }
   .btn-warning:focus, .btn-warning.focus {
-    color: #212529;
+    color: #000000;
     background-color: #e0a800;
     border-color: #d39e00;
     box-shadow: 0 0 0 0.2rem rgba(222, 170, 12, 0.5); }
   .btn-warning.disabled, .btn-warning:disabled {
-    color: #212529;
+    color: #000000;
     background-color: #ffc107;
     border-color: #ffc107; }
   .btn-warning:not(:disabled):not(.disabled):active, .btn-warning:not(:disabled):not(.disabled).active,
   .show > .btn-warning.dropdown-toggle {
-    color: #212529;
+    color: #000000;
     background-color: #d39e00;
     border-color: #c69500; }
     .btn-warning:not(:disabled):not(.disabled):active:focus, .btn-warning:not(:disabled):not(.disabled).active:focus,
@@ -4292,25 +4292,25 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.2rem rgba(225, 83, 97, 0.5); }
 
 .btn-light {
-  color: #212529;
+  color: #000000;
   background-color: #f8f9fa;
   border-color: #f8f9fa; }
   .btn-light:hover {
-    color: #212529;
+    color: #000000;
     background-color: #e2e6ea;
     border-color: #dae0e5; }
   .btn-light:focus, .btn-light.focus {
-    color: #212529;
+    color: #000000;
     background-color: #e2e6ea;
     border-color: #dae0e5;
     box-shadow: 0 0 0 0.2rem rgba(216, 217, 219, 0.5); }
   .btn-light.disabled, .btn-light:disabled {
-    color: #212529;
+    color: #000000;
     background-color: #f8f9fa;
     border-color: #f8f9fa; }
   .btn-light:not(:disabled):not(.disabled):active, .btn-light:not(:disabled):not(.disabled).active,
   .show > .btn-light.dropdown-toggle {
-    color: #212529;
+    color: #000000;
     background-color: #dae0e5;
     border-color: #d3d9df; }
     .btn-light:not(:disabled):not(.disabled):active:focus, .btn-light:not(:disabled):not(.disabled).active:focus,
@@ -4344,22 +4344,22 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5); }
 
 .btn-outline-primary {
-  color: #002147;
-  border-color: #002147; }
+  color: #000000;
+  border-color: #000000; }
   .btn-outline-primary:hover {
     color: #fff;
-    background-color: #002147;
-    border-color: #002147; }
+    background-color: #000000;
+    border-color: #000000; }
   .btn-outline-primary:focus, .btn-outline-primary.focus {
     box-shadow: 0 0 0 0.2rem rgba(0, 33, 71, 0.5); }
   .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-    color: #002147;
+    color: #000000;
     background-color: transparent; }
   .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
   .show > .btn-outline-primary.dropdown-toggle {
     color: #fff;
-    background-color: #002147;
-    border-color: #002147; }
+    background-color: #000000;
+    border-color: #000000; }
     .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-outline-primary.dropdown-toggle:focus {
       box-shadow: 0 0 0 0.2rem rgba(0, 33, 71, 0.5); }
@@ -4368,7 +4368,7 @@ fieldset:disabled a.btn {
   color: #fdc800;
   border-color: #fdc800; }
   .btn-outline-secondary:hover {
-    color: #212529;
+    color: #000000;
     background-color: #fdc800;
     border-color: #fdc800; }
   .btn-outline-secondary:focus, .btn-outline-secondary.focus {
@@ -4378,7 +4378,7 @@ fieldset:disabled a.btn {
     background-color: transparent; }
   .btn-outline-secondary:not(:disabled):not(.disabled):active, .btn-outline-secondary:not(:disabled):not(.disabled).active,
   .show > .btn-outline-secondary.dropdown-toggle {
-    color: #212529;
+    color: #000000;
     background-color: #fdc800;
     border-color: #fdc800; }
     .btn-outline-secondary:not(:disabled):not(.disabled):active:focus, .btn-outline-secondary:not(:disabled):not(.disabled).active:focus,
@@ -4431,7 +4431,7 @@ fieldset:disabled a.btn {
   color: #ffc107;
   border-color: #ffc107; }
   .btn-outline-warning:hover {
-    color: #212529;
+    color: #000000;
     background-color: #ffc107;
     border-color: #ffc107; }
   .btn-outline-warning:focus, .btn-outline-warning.focus {
@@ -4441,7 +4441,7 @@ fieldset:disabled a.btn {
     background-color: transparent; }
   .btn-outline-warning:not(:disabled):not(.disabled):active, .btn-outline-warning:not(:disabled):not(.disabled).active,
   .show > .btn-outline-warning.dropdown-toggle {
-    color: #212529;
+    color: #000000;
     background-color: #ffc107;
     border-color: #ffc107; }
     .btn-outline-warning:not(:disabled):not(.disabled):active:focus, .btn-outline-warning:not(:disabled):not(.disabled).active:focus,
@@ -4473,7 +4473,7 @@ fieldset:disabled a.btn {
   color: #f8f9fa;
   border-color: #f8f9fa; }
   .btn-outline-light:hover {
-    color: #212529;
+    color: #000000;
     background-color: #f8f9fa;
     border-color: #f8f9fa; }
   .btn-outline-light:focus, .btn-outline-light.focus {
@@ -4483,7 +4483,7 @@ fieldset:disabled a.btn {
     background-color: transparent; }
   .btn-outline-light:not(:disabled):not(.disabled):active, .btn-outline-light:not(:disabled):not(.disabled).active,
   .show > .btn-outline-light.dropdown-toggle {
-    color: #212529;
+    color: #000000;
     background-color: #f8f9fa;
     border-color: #f8f9fa; }
     .btn-outline-light:not(:disabled):not(.disabled):active:focus, .btn-outline-light:not(:disabled):not(.disabled).active:focus,
@@ -4513,7 +4513,7 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #002147;
+  color: #000000;
   text-decoration: none; }
   .btn-link:hover {
     color: black;
@@ -4599,7 +4599,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 0;
   margin: 0.125rem 0 0;
   font-size: 1rem;
-  color: #212529;
+  color: #000000;
   text-align: left;
   list-style: none;
   background-color: #fff;
@@ -4736,7 +4736,7 @@ input[type="button"].btn-block {
   padding: 0.25rem 1.5rem;
   clear: both;
   font-weight: 400;
-  color: #212529;
+  color: #000000;
   text-align: inherit;
   white-space: nowrap;
   background-color: transparent;
@@ -4748,7 +4748,7 @@ input[type="button"].btn-block {
   .dropdown-item.active, .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #002147; }
+    background-color: #000000; }
   .dropdown-item.disabled, .dropdown-item:disabled {
     color: #6c757d;
     pointer-events: none;
@@ -4768,7 +4768,7 @@ input[type="button"].btn-block {
 .dropdown-item-text {
   display: block;
   padding: 0.25rem 1.5rem;
-  color: #212529; }
+  color: #000000; }
 
 .btn-group,
 .btn-group-vertical {
@@ -5024,8 +5024,8 @@ input[type="button"].btn-block {
   opacity: 0; }
   .custom-control-input:checked ~ .custom-control-label::before {
     color: #fff;
-    border-color: #002147;
-    background-color: #002147; }
+    border-color: #000000;
+    background-color: #000000; }
   .custom-control-input:focus ~ .custom-control-label::before {
     box-shadow: 0 0 0 0.2rem rgba(0, 33, 71, 0.25); }
   .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
@@ -5071,8 +5071,8 @@ input[type="button"].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e"); }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #002147;
-  background-color: #002147; }
+  border-color: #000000;
+  background-color: #000000; }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e"); }
@@ -5243,7 +5243,7 @@ input[type="button"].btn-block {
     width: 1rem;
     height: 1rem;
     margin-top: -0.25rem;
-    background-color: #002147;
+    background-color: #000000;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -5265,7 +5265,7 @@ input[type="button"].btn-block {
   .custom-range::-moz-range-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #002147;
+    background-color: #000000;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -5290,7 +5290,7 @@ input[type="button"].btn-block {
     margin-top: 0;
     margin-right: 0.2rem;
     margin-left: 0.2rem;
-    background-color: #002147;
+    background-color: #000000;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -5383,7 +5383,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #002147; }
+  background-color: #000000; }
 
 .nav-fill .nav-item {
   flex: 1 1 auto;
@@ -5866,7 +5866,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #002147;
+  color: #000000;
   background-color: #fff;
   border: 1px solid #dee2e6; }
   .page-link:hover {
@@ -5892,8 +5892,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #002147;
-  border-color: #002147; }
+  background-color: #000000;
+  border-color: #000000; }
 
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -5958,7 +5958,7 @@ input[type="button"].btn-block {
 
 .badge-primary {
   color: #fff;
-  background-color: #002147; }
+  background-color: #000000; }
   a.badge-primary:hover, a.badge-primary:focus {
     color: #fff;
     background-color: #000914; }
@@ -5967,10 +5967,10 @@ input[type="button"].btn-block {
     box-shadow: 0 0 0 0.2rem rgba(0, 33, 71, 0.5); }
 
 .badge-secondary {
-  color: #212529;
+  color: #000000;
   background-color: #fdc800; }
   a.badge-secondary:hover, a.badge-secondary:focus {
-    color: #212529;
+    color: #000000;
     background-color: #caa000; }
   a.badge-secondary:focus, a.badge-secondary.focus {
     outline: 0;
@@ -5997,10 +5997,10 @@ input[type="button"].btn-block {
     box-shadow: 0 0 0 0.2rem rgba(23, 162, 184, 0.5); }
 
 .badge-warning {
-  color: #212529;
+  color: #000000;
   background-color: #ffc107; }
   a.badge-warning:hover, a.badge-warning:focus {
-    color: #212529;
+    color: #000000;
     background-color: #d39e00; }
   a.badge-warning:focus, a.badge-warning.focus {
     outline: 0;
@@ -6017,10 +6017,10 @@ input[type="button"].btn-block {
     box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.5); }
 
 .badge-light {
-  color: #212529;
+  color: #000000;
   background-color: #f8f9fa; }
   a.badge-light:hover, a.badge-light:focus {
-    color: #212529;
+    color: #000000;
     background-color: #dae0e5; }
   a.badge-light:focus, a.badge-light.focus {
     outline: 0;
@@ -6172,7 +6172,7 @@ input[type="button"].btn-block {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #002147;
+  background-color: #000000;
   transition: width 0.6s ease; }
   @media (prefers-reduced-motion: reduce) {
     .progress-bar {
@@ -6213,7 +6213,7 @@ input[type="button"].btn-block {
     text-decoration: none;
     background-color: #f8f9fa; }
   .list-group-item-action:active {
-    color: #212529;
+    color: #000000;
     background-color: #e9ecef; }
 
 .list-group-item {
@@ -6235,8 +6235,8 @@ input[type="button"].btn-block {
   .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #002147;
-    border-color: #002147; }
+    background-color: #000000;
+    border-color: #000000; }
   .list-group-item + .list-group-item {
     border-top-width: 0; }
     .list-group-item + .list-group-item.active {
@@ -6846,7 +6846,7 @@ a.close.disabled {
 
 .popover-body {
   padding: 0.5rem 0.75rem;
-  color: #212529; }
+  color: #000000; }
 
 .carousel {
   position: relative; }
@@ -7069,7 +7069,7 @@ a.close.disabled {
   vertical-align: text-top !important; }
 
 .bg-primary {
-  background-color: #002147 !important; }
+  background-color: #000000 !important; }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
@@ -7169,7 +7169,7 @@ button.bg-dark:focus {
   border-left: 0 !important; }
 
 .border-primary {
-  border-color: #002147 !important; }
+  border-color: #000000 !important; }
 
 .border-secondary {
   border-color: #fdc800 !important; }
@@ -9410,7 +9410,7 @@ button.bg-dark:focus {
   color: #fff !important; }
 
 .text-primary {
-  color: #002147 !important; }
+  color: #000000 !important; }
 
 a.text-primary:hover, a.text-primary:focus {
   color: black !important; }
@@ -9458,7 +9458,7 @@ a.text-dark:hover, a.text-dark:focus {
   color: #121416 !important; }
 
 .text-body {
-  color: #212529 !important; }
+  color: #000000 !important; }
 
 .text-muted {
   color: #6c757d !important; }
@@ -9554,7 +9554,7 @@ a.text-dark:hover, a.text-dark:focus {
   --theme-color: #000000;
   --secondary-color: #000000;
   --opposite-color: #fdc800;
-  --text-color: #cc0000;
+  --text-color: #000000;
   --title-color: #ff0000;
   --white-color: #ffffff;
   --light-bg-color: #f6f6f6; }
@@ -11836,7 +11836,7 @@ button.owl-next {
   text-align: center; }
 
 .w3l-footer-29-main .footer-29 {
-  background: #002147;
+  background: #000000;
   padding: 60px 0; }
 
 .w3l-footer-29-main .footer-top-29 {
