--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -2336,7 +2336,7 @@
   --gray: #6c757d;
   --gray-dark: #343a40;
   --primary: #000000;
-  --secondary: #fdc800;
+  --secondary: #cc0000;
   --success: #28a745;
   --info: #17a2b8;
   --warning: #ffc107;
@@ -4104,7 +4104,7 @@ textarea.form-control {
 .btn {
   display: inline-block;
   font-weight: 400;
-  color: #000000;
+  color: #ffffff;
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
@@ -4164,7 +4164,7 @@ fieldset:disabled a.btn {
 .btn-secondary {
   color: #000000;
   background-color: #000000;
-  border-color: #fdc800; }
+  border-color: #cc0000; }
   .btn-secondary:hover {
     color: #000000;
     background-color: #000000;
@@ -4177,7 +4177,7 @@ fieldset:disabled a.btn {
   .btn-secondary.disabled, .btn-secondary:disabled {
     color: #000000;
     background-color: #000000;
-    border-color: #fdc800; }
+    border-color: #cc0000; }
   .btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active,
   .show > .btn-secondary.dropdown-toggle {
     color: #000000;
@@ -4365,22 +4365,22 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.2rem rgba(0, 33, 71, 0.5); }
 
 .btn-outline-secondary {
-  color: #fdc800;
-  border-color: #fdc800; }
+  color: #cc0000;
+  border-color: #cc0000; }
   .btn-outline-secondary:hover {
     color: #000000;
-    background-color: #fdc800;
-    border-color: #fdc800; }
+    background-color: #cc0000;
+    border-color: #cc0000; }
   .btn-outline-secondary:focus, .btn-outline-secondary.focus {
     box-shadow: 0 0 0 0.2rem rgba(253, 200, 0, 0.5); }
   .btn-outline-secondary.disabled, .btn-outline-secondary:disabled {
-    color: #fdc800;
+    color: #cc0000;
     background-color: transparent; }
   .btn-outline-secondary:not(:disabled):not(.disabled):active, .btn-outline-secondary:not(:disabled):not(.disabled).active,
   .show > .btn-outline-secondary.dropdown-toggle {
     color: #000000;
-    background-color: #fdc800;
-    border-color: #fdc800; }
+    background-color: #cc0000;
+    border-color: #cc0000; }
     .btn-outline-secondary:not(:disabled):not(.disabled):active:focus, .btn-outline-secondary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-outline-secondary.dropdown-toggle:focus {
       box-shadow: 0 0 0 0.2rem rgba(253, 200, 0, 0.5); }
@@ -5968,7 +5968,7 @@ input[type="button"].btn-block {
 
 .badge-secondary {
   color: #000000;
-  background-color: #fdc800; }
+  background-color: #cc0000; }
   a.badge-secondary:hover, a.badge-secondary:focus {
     color: #000000;
     background-color: #caa000; }
@@ -7077,7 +7077,7 @@ button.bg-primary:focus {
   background-color: #000914 !important; }
 
 .bg-secondary {
-  background-color: #fdc800 !important; }
+  background-color: #cc0000 !important; }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
 button.bg-secondary:hover,
@@ -7172,7 +7172,7 @@ button.bg-dark:focus {
   border-color: #000000 !important; }
 
 .border-secondary {
-  border-color: #fdc800 !important; }
+  border-color: #cc0000 !important; }
 
 .border-success {
   border-color: #28a745 !important; }
@@ -9416,7 +9416,7 @@ a.text-primary:hover, a.text-primary:focus {
   color: black !important; }
 
 .text-secondary {
-  color: #fdc800 !important; }
+  color: #cc0000 !important; }
 
 a.text-secondary:hover, a.text-secondary:focus {
   color: #b18c00 !important; }
@@ -9553,7 +9553,7 @@ a.text-dark:hover, a.text-dark:focus {
 :root {
   --theme-color: #000000;
   --secondary-color: #ffffff;
-  --opposite-color: #fdc800;
+  --opposite-color: #cc0000;
   --text-color: #000000;
   --title-color: #ff0000;
   --white-color: #ffffff;
@@ -12688,7 +12688,7 @@ button.owl-next {
 
 .w3l-contact-breadcrum .breadcrum-bg {
   background-size: cover;
-  background-image: linear-gradient(to right, rgba(0, 33, 71, 0.8), rgba(0, 33, 71, 0.8)), url(../images/5.jpg);
+  background-image: linear-gradient(to right, black, red), url(../images/5.jpg);
   background-repeat: no-repeat, no-repeat, no-repeat;
   background-position: center;
   background-attachment: fixed; }
@@ -12721,7 +12721,7 @@ button.owl-next {
 
 .w3l-service-breadcrum .breadcrum-bg {
   background-size: cover;
-  background-image: linear-gradient(to left, black, #cc0000), url(../images/2.jpg);
+  background-image: linear-gradient(to left, black, red), url(../images/2.jpg);
   background-repeat: no-repeat, no-repeat, no-repeat;
   background-position: center;
   background-attachment: fixed; }
