--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -11133,7 +11133,7 @@ button.owl-next {
     grid-gap: 20px; }
   .w3l-feature-3 .three-grids-columns h4 {
     font-size: 20px;
-    color: #ffffff;
+    color: #cc0000;
     line-height: 30px;
     padding-top: 25px;
     font-weight: 600; }
@@ -11141,7 +11141,7 @@ button.owl-next {
     padding-top: 15px;
     font-size: 16px;
     line-height: 24px;
-    color: #cc0000; }
+    color: white; }
   .w3l-feature-3 .three-grids-columns span.fa {
     font-size: 36px;
     color: var(--opposite-color); }
